fixed dropdown css on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -54,6 +54,21 @@ body::-webkit-scrollbar-thumb {
     padding-right: 10rem;
 }
 
+.navbar ul li a {
+    color: #EEEEEE;
+    text-decoration: none;
+    -webkit-transition: all .1s linear;
+    -o-transition: all .1s linear;
+    transition: all .1s linear;
+    padding: 10px 0 10px 24px;
+}
+
+.navbar ul li a:hover {
+    color: #EEEEEE;
+    text-decoration: none;
+    text-shadow: 0 0 5px #FFF, 0 0 1.5em #FFF, 0 0 1em #FFF;
+}
+
 
 
 
@@ -64,12 +79,12 @@ body::-webkit-scrollbar-thumb {
     border-color: #00acb500;
     color: #EEE;
     border-radius: 7px;
-    padding: 6px 12px;
+    padding: 12px 24px;
 }
 
 .custom-toggler:focus,
 .custom-toggler:hover {
-    color: #bef6ff;
+    color: transparent;
 }
 
 
